--- a/src/chat/chat.module.css
+++ b/src/chat/chat.module.css
@@ -17,6 +17,13 @@
   padding: 6px 16px;
 }
 
+.loading {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .message {
   display: flex;
   flex-direction: column;
